tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_31.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := 1;
               r := ((x * (1 * (- 1))) <= (+ (- 1223)));
               r := ((~ ((2 # y) & (~ p))) & (200 < 0));
               q := r;
               x := ((+ (200 DIV 0)) MOD y);
               y := (y MOD (+ 1223));
  (* error *)  y := (+ (y DIV (y DIV (q + y))));
               x := y;
               z := 1;
               q := p
END Test17.